# gydpdict

./: .cvsignore  Makefile.am  configure.in  gydpdict.glade  gydpdict.gladep
src/: .cvsignore  Makefile.am  callbacks.c  callbacks.h  dictionary.c  dictionary.h  gydpdict.ui  interface.c  main.c  main.h
